Overview of changes in Glib::Object::Introspection 0.017
========================================================

* Register unregistered enums so that, e.g., GSpawnFlags and VtePtyFlags become
  usable.
* Pass on NULL user data in C invocations if appropriate

Overview of changes in Glib::Object::Introspection 0.016
========================================================

* Add support for unicode character arguments to Perl callbacks.
* Avoid misusing the macro PL_na, thus preventing issues when
  Glib::Object::Introspection is used in conjunction with certain XS modules,
  among them XML::Parser and String::Approx.
* Fix build on MinGW with dmake.

Overview of changes in Glib::Object::Introspection 0.015
========================================================

* Add support for array arguments to Perl callbacks.
* Allow Perl code to return Glib::Error objects.
* Register error domains.
* Support conversion to raw structs from unregistered libraries.

Overview of changes in Glib::Object::Introspection 0.014
========================================================

* Implement generic signal marshalling.
* Implement a generic constructor for boxed types and install it as
  Glib::Boxed::new.
* Generate error messages when functions are passed an incorrect number of
  parameters.
* Avoid using vfunc names that coincide with special Perl subs.  This fixes
  double-frees occurring for subclasses of Gtk3::Widget.
* Rework the way fallback vfuncs are installed.
* Correctly marshal out/in-out args when invoking Perl code and fix some other
  related bugs.  This makes it possible to implement complicated interfaces
  such as Gtk3::TreeModel.
* Allow enums and flags to have class functions.
* Add API to manually convert between SVs and enums.
* Plug a few memory leaks.

Overview of changes in Glib::Object::Introspection 0.013
========================================================

* SV -> object: do some type checking
* Fix building with perl <= 5.14