@@ -57,5 +57,5 @@
       },
       "x_MailingList" : "https://mail.gnome.org/mailman/listinfo/gtk-perl-list"
    },
-   "version" : "0.017"
+   "version" : "0.018"
 }
